2011-06-14  Lucas Forschler  <lforschler@apple.com>

    Merged 87831.

    2011-06-01  Adam Roben  <aroben@apple.com>

        Render accelerated content into a web process-owned child HWND

        This allows us to use WKCACFView's far more efficient kWKCACFViewDrawingDestinationWindow
        mode, which gives us asynchronous rendering on a background thread and doesn't require us to
        read bits off the GPU back into system memory.

        A new class, WKCACFViewWindow, represents the child HWND. The child HWND is placed at the
        bottom of the z-order so it won't obscure any other child HWNDs (i.e., windowed plugins).
        The child HWND is made transparent to mouse events so that WKView will continue to receive
        mouse events even though it is obscured by the child HWND.

        There is now a bunch of dead code in DrawingAreaImpl to handle our old rendering model. I'll
        remove that in a future patch.

        Fixes <http://webkit.org/b/58054> <rdar://problem/9249839> REGRESSION (WebKit2): Accelerated
        CSS animations have a lower framerate than in WebKit1

        Reviewed by Anders Carlsson.

        * Shared/LayerTreeContext.h: Added HWND member on Windows.

        * Shared/win/CoalescedWindowGeometriesUpdater.cpp:
        (WebKit::CoalescedWindowGeometriesUpdater::updateGeometries):
        * Shared/win/CoalescedWindowGeometriesUpdater.h:
        Added new BringToTopOrNot argument. Allows the caller to specify that all windows being
        updated should also be brought to the top of the z-order.

        * Shared/win/LayerTreeContextWin.cpp:
        (WebKit::LayerTreeContext::LayerTreeContext):
        (WebKit::LayerTreeContext::~LayerTreeContext):
        (WebKit::LayerTreeContext::encode):
        (WebKit::LayerTreeContext::decode):
        (WebKit::LayerTreeContext::isEmpty):
        (WebKit::operator==):
        Implemented based on new window member.

        * UIProcess/win/WebView.cpp: